--- a/in-page-plugin.html
+++ b/in-page-plugin.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="//players.brightcove.com/1655482059001/83f4546f-a296-43cb-8872-9c75d1c1cc21_default/bc.min.css" rel="stylesheet">
+<link href="//players.brightcove.com/1655482059001/76c5a59b-c481-4554-b28e-e1fb81eb5ea5_default/bc.min.css" rel="stylesheet">
 <style>
 .video-js{height:360px; width:480px;}
-.vjs-big-play-button{background: #ff0000;}
-.vjs-control-bar{background: #ff0000;}
+.vjs-big-play-button {
+  background-color: #ffad00;
+  opacity: 0.7;
+}
+.vjs-play-progress, .vjs-volume-level, .vjs-big-play-button {
+  background-color: #ffad00;
+}
 .overlay {
   height:50px; 
   width:480px;
@@ -16,15 +21,15 @@
 </style>
 </head>
 <body>
-<video 
+<video
   id="player"
   data-account="1655482059001"
-  data-player="83f4546f-a296-43cb-8872-9c75d1c1cc21"
+  data-player="76c5a59b-c481-4554-b28e-e1fb81eb5ea5"
   data-embed="default"
   data-id=""
   class="video-js" controls></video>
-<script src="//players.brightcove.com/1655482059001/83f4546f-a296-43cb-8872-9c75d1c1cc21_default/node_modules/video.js/dist/video-js/video.js"></script>
-<script src="//players.brightcove.com/1655482059001/83f4546f-a296-43cb-8872-9c75d1c1cc21_default/bc.min.js"></script>
+<script src="//players.brightcove.com/1655482059001/76c5a59b-c481-4554-b28e-e1fb81eb5ea5_default/node_modules/video.js/dist/video-js/video.js"></script>
+<script src="//players.brightcove.com/1655482059001/76c5a59b-c481-4554-b28e-e1fb81eb5ea5_default/bc.min.js"></script>
 <script>
   var 
     player = videojs('player'),
