--- a/vjs-plugin.html
+++ b/vjs-plugin.html
@@ -14,8 +14,9 @@
   height:50px; 
   width:480px;
   text-align:center;
-  font-size:24pt;
+  font-size:32px;
   color: #ff0000;
+  position: absolute;
 }
 </style>
 </head>
