Correct Iframe source

--- a/webinar.html
+++ b/webinar.html
@@ -4,7 +4,7 @@
 
 </head>
 <body>
-<iframe src='//players.brightcove.com/1655482059001/f6b685f3-1be2-4dcc-842a-9d1cd5cddbc6_default/...' allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
+<iframe src='//http://players.brightcove.com/1655482059001/f6b685f3-1be2-4dcc-842a-9d1cd5cddbc6_default/index.html' allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
 
 </body>
 </html>
