Kicking git pages

--- a/webinar.html
+++ b/webinar.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <style>
-
 .player {
   display: block;
   height:350px;
@@ -10,14 +9,9 @@
   margin: 0 auto;
   border: 0;
 }
-
 </style>
-
 </head>
-
 <body>
-<iframe class=player src='//players.brightcove.com/1655482059001/f6b685f3-1be2-4dcc-842a-9d1cd5cddbc6_default/index.html' allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
-
+<iframe class="player" src='//players.brightcove.com/1655482059001/f6b685f3-1be2-4dcc-842a-9d1cd5cddbc6_default/index.html' allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
 </body>
-
 </html>
